k8s/base/strapi-cms/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: strapi-cms
  labels:
    name: strapi-cms
    environment: production
    team: content
    app: strapi
